<resources>
    <string name="app_name">WeatherApp</string>
    <string name="text_degrees">23º</string>
    <string name="text_city">Ciudad de Mexico</string>
    <string name="text_status">Nublado</string>
    <string name="welcome_text">Bienvenido a mi App del clima para poder ver el clima de una ciudad selecciona en la opción de abajo</string>
    <string name="mexico_button_text">Clima de la ciudad de México</string>
    <string name="berlin_button_text">Clima de la ciudad de Berlín</string>
</resources>
